--- a/vsbm/vsbm.html
+++ b/vsbm/vsbm.html
@@ -40,12 +40,12 @@
         <span>不支持canvas浏览器</span>
     </canvas>
 </div>
-    <button id="btn">CONFIG</button>
+    <button id="btn">配置</button>
     <div id="config">
         <textarea name="" id="kernel" cols="30" rows="10"></textarea>
         <br />
-        <button id="apply">APPLY</button>
-        <button id="cancle">CANCLE</button>
+        <button id="apply">应用</button>
+        <button id="cancle">取消</button>
     </div>
     <script>
 alert("trigonometric and inverse trigonometric functions test.\ncreated by cznull@bilibili");
