--- a/vsbm/vsbm.html
+++ b/vsbm/vsbm.html
@@ -48,7 +48,7 @@
         <button id="cancle">取消</button>
     </div>
     <script>
-alert("trigonometric and inverse trigonometric functions test.\ncreated by cznull@bilibili");
+alert("三角函数与反三角函数测试题由哔哩哔哩用户 cznull 制作");
     var cx, cy;
     var glposition;
     var glright;
